fixing broken css

--- a/newsite/styles/main.css
+++ b/newsite/styles/main.css
@@ -83,25 +83,17 @@ aside, .content, li {
     background: url(../images/subfotos/IMG_1008.jpg) no-repeat;
 }*/
 .content {
-    padding-left: 20%;
+    padding-left: 30%;
     width: 100%;
 }
 aside {
     margin-left:-100%;
-    width: 20%;
+    width: 30%;
     /* ugly 
   -webkit-transition: height 1s ease-out;
      -moz-transition: height 1s ease-out; 
        -o-transition: height 1s ease-out;*/
 }
-
-/*#sq {
-    height:10px;
-    width:10px;
-    background-color: #000;
-    position:absolute;
-    z-index:1000;
-}*/
 
 aside:after {   /* add white space because the footer is absolute and therefore doesn't take up space */
     content: "\00A0";
@@ -115,11 +107,11 @@ aside:after {   /* add white space because the footer is absolute and therefore 
     /*overflow: hidden;
     display: block;*/
     
-    left: 9%;
+    left: 15%;
     margin: 0;    
     position: absolute;
     top: 0;
-    width: 91%;
+    width: 85%;
     z-index: -1;
     -webkit-box-shadow: 0 5px 10px #aaa;
            -moz-box-shadow: 0 5px 10px #aaa;
